kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
